Fix overflow when creating a channel

--- a/client/src/app/+my-account/my-account-video-channels/my-account-video-channel-edit.component.scss
+++ b/client/src/app/+my-account/my-account-video-channels/my-account-video-channel-edit.component.scss
@@ -11,7 +11,7 @@ my-actor-avatar-info {
 }
 
 .input-group {
-  @include peertube-input-group(340px);
+  @include peertube-input-group(fit-content);
 }
 
 .input-group-append {
